# opengl-test

./: .gitignore  CMakeLists.txt  glad.c  main.cpp  main.h
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
